Primeira Parte do projeto HTML

--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
+    <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 
 <body>
+    <header>
 
+    </header>
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="iframe-tela" id="tela" frameborder="0"></iframe>
+        </section>
+
+        <section id="redes-sociais">
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
