fim do projeto - 22/07 - 19:54

--- a/index.html
+++ b/index.html
@@ -10,21 +10,33 @@
 </head>
 
 <body>
-    <header>
-
-    </header>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="iframe-tela" id="tela" frameborder="0"></iframe>
+            <iframe src="./pages/home.html" name="iframe-tela" id="tela" frameborder="0"></iframe>
         </section>
 
         <section id="redes-sociais">
 
+            <br><a href="pages/instagram.html" target="iframe-tela"><img
+                    src="src/imagens/logo-instagram.jpg" class="redes-icons" id="primeiro-icone"></a>
+
+            <a href="pages/facebook.html" target="iframe-tela"><img
+                    src="src/imagens/logo-facebook.jpg" class="redes-icons" alt=""></a>
+
+
+            <a href="pages/twitter.html" target="iframe-tela"><img src="./src/imagens/logo-twitter.jpg"
+            class="redes-icons" alt=""></a>
+
+            <a href="pages/github.html" target="iframe-tela">
+                <img src="./src/imagens/logo-github.jpg" class="redes-icons" alt="">
+            </a>
+
+            <a href="./pages/youtube.html" target="iframe-tela"><img src="./src/imagens/logo-youtube.jpg" class="redes-icons" alt=""></a>
+
+            <a href="../pages/home.html" target="iframe-tela"><img src="./src/imagens/logo-home.jpg" class="redes-icons" alt=""></a>
+
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
